@@ -1,6 +1,7 @@
 Revision history for Moo-Role-ToJSON
 
 {{$NEXT}}
+    - Add complete test example
 
 0.01  2018-02-12 00:01:56 GMT
-        - Initial release
+    - Initial release
